loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:9: error: '(' expected but identifier found.
for k <- 0 to pas {
    ^